see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Nov-2010 Jean-Marie Simonet
 $ [#23449] confusing language in acl tootltip for categories and content
 # [#23476] code editor textarea missing border. Thanks Andrea.

26-Nov-2010 Andrew Eddie
 # Fixed issue [#23495] ACL for Image Manager access to the uploader (Elin Waring, Christophe Demko).

25-Nov-2010 Jean-Marie Simonet
 # Hiding and correcting related to [#23117]
 # [#23505] SEF off url inconsistencies in category routes. Thanks Andrew.
 
25-Nov-2010 Christophe Demko
 # [#23462] Checkboxes Form Field is not displayed correctly Options panel (Andrea Tarr)
 # [#23460] com_plugins uses wrong JPATH constants (Ian MacLennan)
 # [#23461] Wrong JPATH constant use in JHtmlEditor (Ian MacLennan)
 # [#23465] Incorrect group attribute set for content search plugin (CY Lee)
 # [#23451] Bring com_search closer to XHTML strict (site) (Rouven Weßling)
 $ [#23473] Default Access Level tooltip (bill richardson)

25-Nov-2010 Andrew Eddie
 # Fixed issue [#23469] Category field for save is showing unauthorized categories (Elin Waring).
 # Fixed issue [#23445] Display of categories layouts has changed and is now incorrect (Elin Waring, bill richardson, Omar Ramos).
 # Fixed issue [#23454] Article Select in modal won't select if you've searched or filtered in Hathor (Andrea Tarr).

24-Nov-2010 Ian MacLennan
 # [#23430] some jhtml behavior's load twice code
 # [#23425] Use the correct Icon for a new Article in Category List view
 # [#23117] Add missing fields to Category Edit

24-Nov-2010 Jean-Marie Simonet
 $ Changing module manager state filter to Published/Unpublished to be consequent.